grafana/tempo/generated/grafana-tempo/templates/vulture/deployment.yaml
---
# Source: grafana-tempo/templates/vulture/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-vulture
  namespace: "grafana-tempo"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-tempo
    app.kubernetes.io/version: 2.5.0
    helm.sh/chart: grafana-tempo-3.7.4
    app.kubernetes.io/component: vulture
spec:
  replicas: 1
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: grafana-tempo
      app.kubernetes.io/component: vulture
  template:
    metadata:
      annotations:
        checksum/config: 97d76e1e53cddc6580fcdf68284a4966930742212d4e0cea812a78c777c7ca4a
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: grafana-tempo
        app.kubernetes.io/version: 2.5.0
        helm.sh/chart: grafana-tempo-3.7.4
        app.kubernetes.io/component: vulture
    spec:
      serviceAccountName: grafana
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: grafana-tempo
                    app.kubernetes.io/component: vulture
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      enableServiceLinks: true
      containers:
        - name: grafana-tempo-vulture
          image: docker.io/bitnami/grafana-tempo-vulture:2.5.0-debian-12-r7
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - -prometheus-listen-address=0.0.0.0:8080
            - -tempo-push-url=http://grafana-distributor
            - -tempo-query-url=http://grafana-query-frontend:3200
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: 8080
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /metrics
              port: 8080
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: tempo-config
              mountPath: /bitnami/grafana-tempo/conf
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: tempo-config
          configMap:
            name: grafana-tempo
